--- a/OwlNightSite/games.html
+++ b/OwlNightSite/games.html
@@ -12,12 +12,17 @@
     <body>
        
        <nav class="head">
-         <ul>
+         <ul class="dropdown">
           <li><a href="index.html" class="logo"></a></li>
-          <li><a href="games.html" class="lin">Games</a></li>
-          <li><a href="jobs.html" class="lin">Jobs</a></li>
-          <li><a href="news.html" class="lin">News</a></li>
-          <li><a href="contact.html" class="lin">Contact</a></li>
+          <li class="dropdown-top"><a href="games.html" class="dropdown-top, lin">Games</a>
+              <ul class="dropdown-inside">
+                 <li><a href="Games/BraveSpace.html">Brave Space</a></li>
+                 <li><a href="#">????? ????</a></li>
+              </ul>
+          </li>
+          <li class="dropdown-top"><a href="jobs.html" class="lin">Jobs</a></li>
+          <li class="dropdown-top"><a href="news.html" class="lin">News</a></li>
+          <li class="dropdown-top"><a href="contact.html" class="lin">Contact</a></li>
          </ul>
         </nav>
        
