Fix dropdown menu

--- a/OwlNightSite/jobs.html
+++ b/OwlNightSite/jobs.html
@@ -14,10 +14,10 @@
         <nav class="head">
          <ul class="dropdown">
           <li><a href="index.html" class="logo"></a></li>
-          <li class="dropdown-top"><a href="games.html" class="dropdown-top, lin">Games</a>
+          <li class="dropdown-top"><a id="qwe" href="games.html" class="dropdown-top, lin">Games</a>
               <ul class="dropdown-inside">
-                 <li><a href="Games/BraveSpace.html">Brave Space</a></li>
-                 <li><a href="#">????? ????</a></li>
+                 <li><a href="Games/BraveSpace.html"><img src="./images/PlayerShipBS.png" alt="" /> Brave Space</a></li>
+                  <li><a href=""><span class="unknown">????? ????</span></a></li>
               </ul>
           </li>
           <li class="dropdown-top"><a href="jobs.html" class="lin">Jobs</a></li>
@@ -114,8 +114,8 @@
         $("#popup1").hide();
     }
 </script>
-       
-        <script type="text/javascript" src="js/javascript.js"></script>
+        <script type="text/javascript" src="js/dropdownList.js"></script>
+        <script type="text/javascript" src="js/mailSender.js"></script>
     </body> 
     
 </html>
