--- a/OwlNightSite/contact.html
+++ b/OwlNightSite/contact.html
@@ -41,6 +41,8 @@
             <br/>
             Пишите нам на почту свои заявки. <span class="mailText">owlnight.software@gmail.com</span>
             <br/>
+            Или заполните анкету на этой странице: <a href="jobs.html" style="text-decoration: none">Jobs</a>.
+            <br/>
             <br/>
             <a href="mailto:owlnight.software@gmail.com" target="_blank" class="gmailImg"></a>
             <a href="https://vk.com/owlnightsw" target="_blank" class="vkImg"></a>
